@@ -57,7 +57,6 @@
 
                 <forkCount>10</forkCount>
                 <reuseForks>true</reuseForks>
-                <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
            
 					<properties>
 						<property>
